src/app/pages/component-viewer/component-viewer.scss
@import '../../../styles/constants';

app-component-viewer {
  font-weight: 400;
  padding: 20px $content-padding-side 50px;

  @media ($mat-xsmall) {
    padding-left: $content-padding-side-xs;
    padding-right: $content-padding-side-xs;
  }
}

.docs-component-viewer {
  margin: 0 auto;
  max-width: 940px;
}

.docs-component-viewer-section-tab {
  text-transform: uppercase;
}

.docs-component-viewer-tabbed-content {
  margin-bottom: 50px;
}

.docs-component-viewer-content {
  position: relative;
  min-height: 500px;

  table-of-contents {
    top: 35px;

    @media (max-width: $small-breakpoint-width) {
      order: -1;
      position: inherit;
      width: auto;
    }
  }
}

.docs-component-view-text-content {
  flex-grow: 1;
  width: 100%;
}

.docs-component-api,
.docs-component-overview {
  width: 80%;

  @media (max-width: $small-breakpoint-width) {
    width: 100%;
    margin-right: 0;
  }
}

